# vds-api-client

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CHANGES.rst  CONTRIBUTING.md  LICENSE.txt  README.rst  conda_environment312.yml  conda_environment37.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  test-python-3-12.yml  test-python-3-6.yml
docs/: Makefile  conf.py  index.rst
src/vds_api_client/: api_cli.py  api_v2.py  requester.py  types.py  vds_api_base.py
tests/: conftest.py  test_api_base.py  test_cli.py  test_rois.py  test_v2.py  will_be_added.md
tests/config_files/: example_config_area.vds  example_config_ts.vds
vds_api_client/: __init__.py  api_cli.py  api_v2.py  requester.py  types.py  vds_api_base.py
